fix(tk 39): apply standard spacing to internship page

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -13,9 +13,15 @@
     color: var(--primary-gold);
 }
 
-p, h1, h2, h3 {
+p, h1, h2, h3, h4 {
     font-family: var(--ss-font), sans-serif;
     color: var(--primary-blue);
+    margin-bottom: 2rem;
+}
+
+h1, h2, h3, h4 {
+    text-transform: uppercase;
+    font-weight: bolder;
 }
 
 h1 {
@@ -35,8 +41,18 @@ h2 {
 h3 {
     font-size: 1.5rem;
     line-height: 1.1;
-    margin: 0;
+    margin-bottom: 0;
     letter-spacing: 3px;
+}
+
+h4 {
+    font-size: 1.2rem;
+    line-height: 1.1;
+    letter-spacing: 1px;
+}
+
+.std-bottom-space {
+    margin-bottom: 2rem;
 }
 
 .pb-20 {
