--- a/src/components/shared/SingleParaWithImage.css
+++ b/src/components/shared/SingleParaWithImage.css
@@ -1,8 +1,6 @@
+@import '../base.css';
+
 .internship-benefits-image {
     width: 200px;
     height: auto;
-}
-
-#para-with-image-div {
-    margin-bottom: 20px;
 }
